--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "HeapSort",
+            "request": "launch",
+            "mainClass": "heapsort.HeapSort",
+            "projectName": ""
+        },
+        {
+            "type": "java",
             "name": "GfG",
             "request": "launch",
             "mainClass": "GfG",
